[0.1h] replace Collectors.toList() with .toList() in user, scene, activity, and notification resources